--- a/src/app/users/users-list/users.component.html
+++ b/src/app/users/users-list/users.component.html
@@ -1,1 +1,6 @@
-users
+<div class="container">
+    <div class="white_box">
+        <h4 class="page_title text-center">Lista użytkowników</h4>
+        <div class="item" *ngFor='let user of users'>{{user.FirstName}}</div>
+    </div>
+</div>
