--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import 'assets/variables.scss';
 body {
     font-family: 'Montserrat', sans-serif;
+    .white_box {
+        margin: 25px;
+        padding: 25px;
+        background: $white;
+        -webkit-box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, 0.33);
+        -moz-box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, 0.33);
+        box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, 0.33);
+    }
 }
