--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,20 @@ body {
         box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, 0.33);
     }
 }
+
+@media (max-width:450px) {
+    body {
+        .white_box {
+            margin: 15px;
+            padding: 15px;
+        }
+    }
+}
+
+@media (max-width:350px) {
+    body {
+        .white_box {
+            margin: 10px 0px;
+        }
+    }
+}
