--- a/src/app/users/users-list/users.component.scss
+++ b/src/app/users/users-list/users.component.scss
@@ -1,6 +1,8 @@
 /deep/ .ngx-pagination {
-    padding: 0;
+    padding: 10px 0;
 }
+
+@media (max-width: 500px) {}
 
 @media (max-width: 450px) {
     /deep/ .ngx-pagination {
