--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,11 @@ body {
             width: 30px;
             height: 30px;
             margin-right: 10px;
+            &_sm {
+                width: 16px;
+                height: 16px;
+                margin-right: 1px;
+            }
         }
     }
     .btn {
