--- a/src/app/movies/movie-delete/movie-delete.component.html
+++ b/src/app/movies/movie-delete/movie-delete.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="white_box">
-
+        <div class="alert alert-danger" *ngIf='message.length>0'>Error!: {{message}}</div>
         <h4 class="page_title text-center font-weight-bold mb-4">Delete movie</h4>
         <div class="row">
             <div class="col-md-6 offset-md-3">
@@ -8,7 +8,7 @@
                     <div class="col-md-7 ">
                         <h5 class="movie_title text-wrap font-weight-bold text-primary">{{movie.Title}}</h5>
                         <p class='movie_rating font-weight-bold'>
-                            Rating: {{ movie.Rating}}/10
+                            <img class='icon ' src="assets/img/star-yellow.png" alt=""> {{ movie.Rating}}
                         </p>
                     </div>
                     <div class="col-md-5 ">
