--- a/src/app/users/user-delete/user-delete.component.html
+++ b/src/app/users/user-delete/user-delete.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="white_box">
-
+        <div class="alert alert-danger" *ngIf='message.length>0'>Error!: {{message}}</div>
         <h4 class="page_title text-center font-weight-bold mb-4">Delete user</h4>
         <div class="row">
             <div class="col-md-6 offset-md-3">
