--- a/src/app/users/users-list/users.component.html
+++ b/src/app/users/users-list/users.component.html
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="white_box">
+        <div class="alert alert-danger" *ngIf='message.length>0'>Error!: {{message}}</div>
         <div class="text-right">
-            <button [routerLink]="['/addUser']" class="btn btn-success"><img class='icon'src="../../../assets/img/add.png"> new user</button>
+            <button [routerLink]="['/addUser']" class="btn btn-success"><img class='icon'src="assets/img/add.png"> new user</button>
         </div>
         <h4 class="page_title text-center font-weight-bold my-4">Users list</h4>
         <app-spinner *ngIf="loading"></app-spinner>
@@ -17,10 +18,10 @@
                                 </ng-template>
                                 <p class='firstname'>{{user.FirstName}} {{user.LastName}}</p>
                             </div>
-                            <div class="col-md-7 ">
-                                <p *ngIf='user.Birthday.length!=0;else noBirthday' class="birthday d-flex flex-nowrap"><img class='icon icon_email' src="assets/img/stork.png" alt="">{{user.Birthday|date:'yyyy-MM-dd'}}</p>
+                            <div class="col-md-7 overflow_visible">
+                                <p *ngIf='user.Birthday.length!=0;else noBirthday' class="birthday d-flex flex-nowrap text-nowrap"><img class='icon icon_email' src="assets/img/stork.png" alt="">{{user.Birthday|date:'yyyy-MM-dd'}}</p>
                                 <ng-template #noBirthday>
-                                    <p class="birthday d-flex flex-nowrap"><img class='icon icon_email' src="assets/img/stork.png" alt="">N/A</p>
+                                    <p class="birthday d-flex flex-nowrap"><img class='icon ' src="assets/img/stork.png" alt="">N/A</p>
                                 </ng-template>
                                 <p *ngIf='user.Email.length!=0; else noEmail' class="email">
                                     <a class=" d-flex flex-nowrap" href="mailto:{{user.Email}}"><img class='icon' src="assets/img/email.png" alt="">{{user.Email}}</a>
