--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,8 @@ body {
             }
         }
         .email {
-            overflow-x: visible a {
+            overflow-x: visible;
+            a {
                 letter-spacing: -0.5px;
             }
         }
@@ -41,6 +42,7 @@ body {
             width: 30px;
             height: 30px;
             margin-right: 10px;
+            object-fit: initial;
             &_sm {
                 width: 16px;
                 height: 16px;
@@ -53,6 +55,9 @@ body {
         border-radius: 0;
         margin-left: 5px;
         margin-right: 5px;
+    }
+    .overflow_visible {
+        overflow-x: visible;
     }
 }
 
