--- a/src/app/core-module/navbar/navbar.component.html
+++ b/src/app/core-module/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['/']"><img class='logo' src='../../../assets/img/video-camera.png' alt="">MyApp</a>
+        <a class="navbar-brand" [routerLink]="['/']"><img class='logo' src='assets/img/video-camera.png' alt="">MyApp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
