--- a/src/app/users/user-delete/user-delete.component.html
+++ b/src/app/users/user-delete/user-delete.component.html
@@ -13,16 +13,16 @@
                         <p class='firstname'>{{user.FirstName}} {{user.LastName}}</p>
                     </div>
                     <div class="col-md-7 ">
-                        <p *ngIf='user.Birthday.length!=0;else noBirthday' class="birthday d-flex flex-nowrap"><img class='icon icon_email' src="../../../assets/img/stork.png" alt="">{{user.Birthday|date:'dd-MM-yyyy'}}</p>
+                        <p *ngIf='user.Birthday.length!=0;else noBirthday' class="birthday d-flex flex-nowrap"><img class='icon icon_email' src="assets/img/stork.png" alt="">{{user.Birthday|date:'dd-MM-yyyy'}}</p>
                         <ng-template #noBirthday>
-                            <p class="birthday d-flex flex-nowrap"><img class='icon icon_email' src="../../../assets/img/stork.png" alt="">N/A</p>
+                            <p class="birthday d-flex flex-nowrap"><img class='icon icon_email' src="assets/img/stork.png" alt="">N/A</p>
                         </ng-template>
                         <p *ngIf='user.Email.length!=0; else noEmail' class="email">
-                            <a class=" d-flex flex-nowrap" href="mailto:{{user.Email}}"><img class='icon' src="../../../assets/img/email.png" alt="">{{user.Email}}</a>
+                            <a class=" d-flex flex-nowrap" href="mailto:{{user.Email}}"><img class='icon' src="assets/img/email.png" alt="">{{user.Email}}</a>
                         </p>
                         <ng-template #noEmail>
                             <p class="email">
-                                <a class=" d-flex flex-nowrap" href=""><img class='icon' src="../../../assets/img/email.png" alt="">N/A</a>
+                                <a class=" d-flex flex-nowrap" href=""><img class='icon' src="assets/img/email.png" alt="">N/A</a>
                             </p>
                         </ng-template>
                     </div>
