--- a/src/app/movies/movies-list/movies.component.html
+++ b/src/app/movies/movies-list/movies.component.html
@@ -22,13 +22,9 @@
                                 <ng-template #noDirector>
                                     <p class="movie_director d-flex flex-nowrap"><img class='icon ' src="assets/img/director.png" alt="">N/A</p>
                                 </ng-template>
-                                <p *ngIf='movie.Year.length!=0; else noYear' class="movie_year"><img class='icon' src="assets/img/year.png" alt="">{{movie.Year}}
+                                <p class="movie_year"><img class='icon' src="assets/img/year.png" alt="">{{movie.Year}}
                                 </p>
-                                <ng-template #noYear>
-                                    <p class="movie_year">
-                                        <img class='icon ' src="assets/img/year.png" alt="">N/A
-                                    </p>
-                                </ng-template>
+
                             </div>
                         </div>
                     </div>
